kubernetes/yamls/api-gateway/kong/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-notls
  namespace: kong
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kong.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-admin
          servicePort: 8001
