kubernetes/yamls/api-gateway/kong/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin
  namespace: kong
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - kong.eventyay.com
    secretName: eventyay-kong-admin-tls
  rules:
  - host: kong.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kong-admin
          servicePort: 8001
